tests/good/fn_transfer.mu
fn test(y : box int) : box int {
    y
}

let mut x = box 5
let mut z = test(x)

