tests/bad/function_incorrect_return_type.mu
fn f() : box int {
    5
}

let mut x = f()

